@@ -57,6 +57,9 @@ Release 0.20.1 - Unreleased
    HBASE-1855  HMaster web application doesn't show the region end key in the
                table detail page (Andrei Dragomir via Stack)
    HBASE-1870  Bytes.toFloat(bytes[],int) is marked private
+   HBASE-1874  Client Scanner mechanism that is used for HbaseAdmin methods
+               (listTables, tableExists), is very slow if the client is far
+               away from the HBase cluster (Andrei Dragomir via Stack)
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
